# eventbot

./: .gitignore  bot.py  pyproject.toml
components/: announcements.py  main.py  teachers.py
server/: server.py
