[tool.poetry]
name = "repl_python3_beta_eventbot"
version = "0.1.0"
description = ""
authors = ["LAMAQDAHODWALA <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.7.3"
Flask = "^2.0.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
